Time: 13 ms (98.98%) | Memory: 55.6 MB (74.42%) - LeetSync